--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,10 @@
   font-weight: bold;
 }
 
+.wrapper .form .button:hover {
+  background-color: #ff993f;
+}
+
 .wrapper h2 {
   text-align: center;
   margin-top: 5px;
